[package]
name = "utilesqlite"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "utilesqlite"
path = "src/lib.rs"

[[bin]]
name = "utilesql"
path = "src/bin.rs"

[dependencies]
deadpool-sqlite = { version = "0.7.0", features = ["tracing"] }
#async-sqlite = { version = "0.1.0", features = ["bundled", "backup", "blob", "serde_json", "trace", "hooks", "array", "functions", "modern-full"] }
rusqlite = { workspace = true, features = ["bundled", "vtab", "blob", "backup", "functions", ] }
serde.workspace = true
serde_json.workspace = true
tilejson.workspace = true
tokio.workspace = true
tracing.workspace = true
utiles = { path = "../utiles" }
